<resources>
    <string name="app_name">Recipes</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change">Change</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="favorites">Favorite Recipes</string>
    <string name="delete_account">Delete Account</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="old_password">Old password:</string>
    <string name="new_password">New password:</string>
    <string name="diet">Diet:</string>
    <string name="saved_recipes">Saved Recipes:</string>
    <string name="suggestions">Suggestions</string>
    <string name="search_results">Search Results</string>
    <string name="caesar_salad">Caesar Salad</string>
    <string name="eggs">Eggs</string>
    <string name="zucchini">Zucchini</string>
    <string name="spaghetti_and_meatballs">Spaghetti and Meatballs</string>
    <string name="brownies">brownies</string>
    <string name="no_search_results">No search results</string>
</resources>